<resources>
    <string name="app_name">CleaningApp</string>

    <string name="btn_order_finish_text">已完成</string>
    <string name="btn_order_reserve_text">未完成</string>
    <string name="tv_order_address_text">服務地址</string>
    <string name="tv_order_price_text">訂單金額</string>
    <string name="tv_order_subTotal_text">服務小計</string>
    <string name="tv_order_discount_text">已使用賣場優惠劵</string>
    <string name="iv_order_expand_description">展開明細</string>
    <string name="iv_order_address_description">詳細地址</string>
    <string name="tv_order_progress_text">查看進度</string>
    <string name="tv_order_number_text">訂單編號: </string>
    <string name="tv_order_date_text">服務時間: </string>

    //cleanerShopShare
    <string name="tv_cleaner_shop_product_name">商品名稱:</string>

    //cleanerShop
    <string name="sv_cleaner_shop_search">搜尋商品</string>

    //cleanerShopProduct
    <string name="tv_cleaner_shop_product_price">商品價格:</string>
    <string name="tv_product_detail_plus">+</string>
    <string name="tv_product_detail_minus">-</string>
    <string name="btn_product_detail_add">加入購物車</string>

    //shoppingCart
    <string name="tv_shopping_cart_price">總金額</string>
    <string name="tv_shopping_cart_send">宅配詳情</string>

    //send
    <string name="tv_send_consignee">收件人:</string>
    <string name="tv_send_phone">連絡電話:</string>
    <string name="tv_send_address">宅配地址:</string>
    <string name="edtTxt_send_name">請輸入姓名</string>
    <string name="edtTxt_send_phone">請輸入電話</string>
    <string name="edtTxt_send_address">請輸入地址</string>
    <string name="btn_send_submit">確認</string>

    //shoppingCartProduct
    <string name="tv_shopping_cart_product_name">商品名稱:</string>

    //completed_payment
    <string name="tv_completed_payment_back">返回訂單列表</string>
    <string name="tv_completed_payment_txt">購買完成</string>

    //member
    <string name="btn_member_area">會員中心</string>
    <string name="btn_member_signout">登出</string>
    <string name="tv_member_info">會員資料</string>
    <string name="tv_member_contactwindow">聯繫客服</string>

    //memberInfo
    <string name="tv_member_info_name">姓名:</string>
    <string name="tv_member_info_gender">性別:</string>
    <string name="tv_member_info_number">手機號碼:</string>
    <string name="tv_member_info_introduce">自我介紹:</string>
    <string name="edtTxt_member_hint">(必填)</string>
    <string name="btn_member_info_submit">完成</string>
    <string name="tv_member_identity">請上傳身分證</string>

    //shoppingInfoReceipt
    <string name="tv_shopping_info_receipt_finish">已完成</string>
    <string name="tv_shopping_info_receipt_price">訂單金額:</string>
    <string name="tv_shopping_info_receipt_count">檢視其他商品</string>
</resources>