<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_send_submit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cleaner.shop.SendFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:text="@string/tv_send_consignee"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#B8B8B9"
        app:layout_constraintBottom_toBottomOf="@+id/edtTxt_send_consignee"
        app:layout_constraintEnd_toEndOf="@+id/edtTxt_send_consignee"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/edtTxt_send_consignee" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/tv_send_phone"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#B8B8B9"
        app:layout_constraintBottom_toBottomOf="@+id/edtTxt_send_number"
        app:layout_constraintEnd_toEndOf="@+id/edtTxt_send_number"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/edtTxt_send_number" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/tv_send_address"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#B8B8B9"
        app:layout_constraintBottom_toBottomOf="@+id/edtTxt_send_address"
        app:layout_constraintEnd_toEndOf="@+id/edtTxt_send_address"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/edtTxt_send_address" />

    <EditText
        android:id="@+id/edtTxt_send_consignee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/edtTxt_send_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <EditText
        android:id="@+id/edtTxt_send_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/edtTxt_send_phone"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/edtTxt_send_consignee"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <EditText
        android:id="@+id/edtTxt_send_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/edtTxt_send_address"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/edtTxt_send_number"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_product_detail_style"
        android:text="@string/btn_send_submit"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="@+id/edtTxt_send_address"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

</androidx.constraintlayout.widget.ConstraintLayout>