<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cl_shopping_info_receipt_style"
    android:elevation="2dp"
    android:padding="12.5dp">

    <TextView
        android:id="@+id/tv_shopping_info_receipt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8F9090"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2023/4/26" />

    <TextView
        android:id="@+id/tv_shopping_info_receipt_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_shopping_info_receipt_finish"
        android:textColor="#3D7EBB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_shopping_info_receipt_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_shopping_info_receipt_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_receipt_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shopping_info_receipt_date" />

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#808080"
        app:layout_constraintBottom_toBottomOf="@+id/rv_receipt_product"
        app:layout_constraintEnd_toEndOf="@+id/rv_receipt_product"
        app:layout_constraintStart_toStartOf="@+id/rv_receipt_product"
        app:layout_constraintTop_toBottomOf="@+id/rv_receipt_product" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_shopping_info_receipt_count"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_shopping_info_receipt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView25"
        app:layout_constraintVertical_bias="1.0"
        tools:text="共2項商品" />

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#808080"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="@+id/tv_shopping_info_receipt_count"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_shopping_info_receipt_price"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_shopping_info_receipt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView23"
        tools:text="$200元整" />

</androidx.constraintlayout.widget.ConstraintLayout>